--- a/Device/STM32F303K8Tx/STCubeGenerated/MDK-ARM/STCubeGenerated.uvprojx
+++ b/Device/STM32F303K8Tx/STCubeGenerated/MDK-ARM/STCubeGenerated.uvprojx
@@ -338,7 +338,7 @@
               <MiscControls>--C99</MiscControls>
               <Define>USE_HAL_DRIVER,STM32F303x8</Define>
               <Undefine></Undefine>
-              <IncludePath>../Inc;                  ../Drivers/STM32F3xx_HAL_Driver/Inc;                  ../Drivers/STM32F3xx_HAL_Driver/Inc/Legacy;                  ../Drivers/CMSIS/Device/ST/STM32F3xx/Include;                  ../Drivers/CMSIS/Include</IncludePath>
+              <IncludePath>../Inc;                   ../Drivers/STM32F3xx_HAL_Driver/Inc;                   ../Drivers/STM32F3xx_HAL_Driver/Inc/Legacy;                   ../Drivers/CMSIS/Device/ST/STM32F3xx/Include;                   ../Drivers/CMSIS/Include</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -551,6 +551,16 @@
               <FileName>pwm.h</FileName>
               <FileType>5</FileType>
               <FilePath>..\Inc\pwm.h</FilePath>
+            </File>
+            <File>
+              <FileName>gestion.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Src\gestion.c</FilePath>
+            </File>
+            <File>
+              <FileName>gestion.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\Inc\gestion.h</FilePath>
             </File>
           </Files>
         </Group>
